--- a/views/main.erb
+++ b/views/main.erb
@@ -14,6 +14,10 @@
     <img src="/images/logo.png" alt="We Got Coders"  />
   </div>
 
+  <div class="profile">
+    
+  </div>
+
   <div id="content">
     <%= yield %>
   </div>
