word count added plus some css tidying

--- a/views/index.erb
+++ b/views/index.erb
@@ -59,8 +59,14 @@
   console.log("I am Javascript!");
 
   var profile_values = document.getElementsByClassName('profile-value');
-  console.log(profile_values);
+  console.log(profile_values[0].innerHTML.length);
   var total_words = 0;
+
+  for (var i = 0; i < profile_values.length; i++) {
+    total_words = total_words + profile_values[i].innerHTML.length
+  }
+
+  console.log(total_words);
 
   // TODO - Count the number of words in the profile.
   // hint - look at what the innerHTML property provides.
