added prime solution

--- a/views/index.erb
+++ b/views/index.erb
@@ -63,7 +63,7 @@
   var total_words = 0;
 
   for (var i = 0; i < profile_values.length; i++) {
-    total_words = total_words + profile_values[i].innerHTML.length
+    total_words = total_words + profile_values[i].innerHTML.length;
   }
 
   console.log(total_words);
